# adp-scraper

./: .gitignore  README.md  adp.json  pyproject.toml
.github/workflows/: scrape.yml
adp_database/: tt0013442.json  tt0018455.json  tt0019422.json  tt0022286.json  tt0022647.json  tt0022899.json  tt0022958.json  tt0023422.json  tt0024451.json  tt0024660.json  tt0024792.json  tt0024886.json  tt0025184.json  tt0025200.json  tt0025997.json  tt0026752.json  tt0026778.json  tt0027126.json  tt0028365.json  tt0028368.json  tt0028390.json  tt0028726.json  tt0028981.json  tt0029161.json  tt0029339.json  tt0029583.json  tt0029947.json  tt0030128.json  tt0031086.json  tt0031381.json  tt0031397.json  tt0031680.json  tt0031905.json  tt0031945.json  tt0032071.json  tt0032138.json  tt0032455.json  tt0032881.json  tt0032910.json  tt0033124.json  (+7670 more)
adp_scraper/: main.py
