[project]
name = "adp-scraper"
version = "0.1.0"
description = "Scrape and parse ADP's databse"
authors = [
    { name = "HamletDuFromage" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
adp-scraper = "adp_scraper.main:main"

[tool.setuptools]
packages = ["adp_scraper"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
